# cg

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/algorithms/: CMakeLists.txt  CMakeLists.txt~  deloneTriangulation.cpp  distanceTwoPoligons.cpp  douglasPeucker.cpp  fourTangent.cpp  minkowskiSum.cpp  shortestPath.cpp  triangleIntersection.cpp  visibilityGraph.cpp
examples/operations/: CMakeLists.txt
include/cg/algorithms/: deloneTriangulation.h  distanceTwoPoligons.h  douglasPeucker.h  fourTangent.h  minkowskiSum.h  mo.h  shortestPath.h  temp.cpp  visibilityGraph.h
include/cg/algorithms/java/: 3d.cpp
include/cg/common/: dijkstra.h
include/cg/operations/: compare_dist.h
include/cg/operations/contains/: contour_point.h
include/cg/operations/intersection/: convex_convex.h
include/cg/primitives/: contour.h  face.h  point.h  segment.h  triangle.h
intersections/: main.cpp
tests/: CMakeLists.txt  delone.cpp
